<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>pawg.dosomedev</groupId>
  <artifactId>java-multithreads-examples</artifactId>
  <version>1.0</version>
  <packaging>pom</packaging>

  <name>java-multithreads-example</name>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>25</maven.compiler.source>
    <maven.compiler.target>25</maven.compiler.target>
  </properties>

  <modules>
    <module>array-blocking-queue</module>
    <module>array-deque</module>
    <module>completable-future</module>
    <module>concurrent-hashmap</module>
    <module>date-formatting</module>
    <module>delay-queue</module>
    <module>enum-map</module>
    <module>enum-set</module>
    <module>future</module>
    <module>identity-hashmap</module>
    <module>linked-blocking-queue</module>
    <module>networking</module>
    <module>optional</module>
    <module>priority-blocking-queue</module>
    <module>priority-queue</module>
    <module>stack</module>
    <module>synchronous-queue</module>
    <module>threading</module>
    <module>tree-map</module>
    <module>tree-set</module>
    <module>vector</module>
    <module>weak-hashmap</module>
  </modules>

  <dependencies>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.18.42</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-shade-plugin</artifactId>
          <version>3.6.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.14.0</version>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <annotationProcessorPaths>
            <path>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
              <version>1.18.42</version>
            </path>
          </annotationProcessorPaths>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
